# STEPS_Validation

./: .gitignore  AddPythonTests.cmake  CMakeLists.txt  README.md  list_tests.py
benchmark/: runall.sh
benchmark/well_mixed_stoc/: camk_ltd.py
postproc/: GHKEfieldUnitTest.py  README.md  caburst.py  main.py  rallpack1.py  rallpack3.py
postproc/GHKEfieldUnitTest/: run.sh  setup_custom_steps.sh
postproc/postproc/: comparator.py  figure.py  raw_data.py  refined_data.py  trace.py  traceDB.py  utils.py
stepsblender/: README.md  run_blender_test.py  run_blender_tets.py
stepsblender/meshes/: sphere_4ktets.msh
stepsblender/models/: default_model.py
validation/: __init__.py  config.py  run_validation_STEPS4_tests.py  run_validation_cp_tests.py  run_validation_dist_tests.py  run_validation_efield_mpi_tests.py  run_validation_mpi_tests.py  run_validation_rd_mpi_tests.py  run_validation_tests.py
validation/checkpoints/: csd_clamp  masteq_diff  unbdiff
validation/validation_cp/: __init__.py  csd_clamp.py  csd_clamp_cp.py  masteq_diff.py  masteq_diff_cp.py  test_csd_clamp.py  test_masteq_diff.py  test_unbdiff.py  testcp_unbdiff.py  unbdiff.py  unbdiff_cp.py
validation/validation_efield/: rallpack3.py  test_rallpack3.py
validation/validation_efield_STEPS4/: rallpack1.py
validation/validation_efield_mpi/: parallel_rallpack1_dist.py  parallel_rallpack1_dist_vertcond.py  parallel_rallpack1_dist_vertcond2.py  rallpack1_dist.py  rallpack1_dist_vertcond.py  rallpack1_dist_vertcond2.py  rallpack3_opsplit.py  run_rallpack1_dist.py  test_rallpack1_dist.py
(+6362 files in other folders)
